# TradeAnalyzer.PyQt

./: .gitignore  LICENSE.md  README.md  launcher.py  pyproject.toml
src/trade_analyzer_desktop/: __init__.py  app.py  database_manager.py
src/trade_analyzer_desktop/analysis/: __init__.py  analysis_results.py  analyzer.py  benchmark.py  benchmark_performance.py  benchmark_symbol.py  daily_statistics.py  daily_statistics_builder.py  statistics_builder.py  statistics_results.py  strategy_daily_statistics.py  strategy_performance.py  trade_statistics.py  trade_statistics_builder.py
src/trade_analyzer_desktop/entities/: __init__.py  backtest_report.py  exchange.py  instrument.py  order.py  position.py  strategy.py  trade.py
src/trade_analyzer_desktop/enums/: __init__.py  action.py  instrument_type.py  order_status.py  order_type.py  position_status.py  resolution.py  side.py  strategy_type.py  trading_platform.py
src/trade_analyzer_desktop/events/: __init__.py  order_filled_event.py
src/trade_analyzer_desktop/qt/: analysis_setting_dialog.py  analysis_window.py  backtest_report_table.py  correlation_analysis_window.py  create_strategy_dialog.py  data_set_list.py  data_set_list_item.py  edit_strategy_dialog.py  equity_chart_window.py  fill_table.py  instrument_table.py  instrument_window.py  list_of_trades_window.py  main_window.py  overview_window.py  statistics_table.py  statistics_view.py  strategy_table.py  strategy_window.py  text_file_order_provider.py  trade_analysis_window.py  trade_detail_dialog.py  trade_table.py  upload_backtest_report_dialog.py
(+18 files in other folders)
